# prolog_llm_router

./: CLAUDE.md  main.py  pyproject.toml  router.pl
rust_sketch/: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  memvid_config.toml  router_standard.pl  tools.json
rust_sketch/crates/cli/: Cargo.toml
rust_sketch/crates/cli/src/: main.rs
rust_sketch/crates/core/: Cargo.toml
rust_sketch/crates/core/src/: agent.rs  apple_maps.rs  apple_notes.rs  apple_weather.rs  intent.rs  lib.rs  llm.rs  router.rs  tools.rs  types.rs
rust_sketch/crates/tauri-app/: Cargo.toml  tauri.conf.json
rust_sketch/crates/tauri-app/icons/: icon.icns
rust_sketch/crates/tauri-app/src/: lib.rs  main.rs
rust_sketch/crates/tauri-app/ui/: index.html  package-lock.json  package.json  vite.config.js
rust_sketch/crates/tauri-app/ui/src/: App.svelte
rust_sketch/crates/tauri-app/ui/src/lib/components/: ConversationHistory.svelte  MessageBubble.svelte  ToolBrowser.svelte  ToolResultCard.svelte
rust_sketch/crates/tauri-app/ui/src/lib/stores/: chat.svelte.ts
rust_sketch/crates/tauri-app/ui/src/lib/types/: index.ts
rust_sketch/prompts/: agent_system.md  intent_extractor.md
rust_sketch/scripts/: notes_index_build.applescript  notes_open.applescript
rust_sketch/src/: agent.rs  apple_maps.rs  apple_notes.rs  apple_weather.rs  conversation_memory.rs  derive_sketch.rs  llm.rs  main.rs  memvid_notes.rs  prolog.rs  scryer.rs
