[package]
name = "prolog-router"
version = "0.1.0"
edition = "2021"

[dependencies]
# SWI-Prolog bindings (requires SWI-Prolog installed)
swipl = { version = "0.3", optional = true }

# Scryer Prolog - pure Rust, no external dependencies
scryer-prolog = { version = "0.10", optional = true }

# Serde for JSON serialization (LLM structured output)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# HTTP client for LLM API
reqwest = { version = "0.11", features = ["blocking", "json"] }

# Error handling
anyhow = "1.0"

[features]
default = ["swipl-backend"]
swipl-backend = ["swipl"]      # Use SWI-Prolog (requires external install)
scryer-backend = ["scryer-prolog"]  # Use Scryer Prolog (pure Rust)
